kubernetes/development/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-system
  namespace: {_NAMESPACE_}
  labels:
    app: solar-system
spec:
  replicas: {_REPLICAS_}
  selector:
    matchLabels:
      app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      containers:
        - name: solar-system
          image: siddharth67/solar-system:85a040728c458d3dea1e44285a4dba382ab7e93c #{_IMAGE_}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
